--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ]
+        ], 
+        "post-install-cmd": [ "ln -sr storage/app/public public/storage" ],
     },
     "config": {
         "preferred-install": "dist",
